--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Tim1986/FriendFinder/issues"
   },
-  "homepage": "https://github.com/Tim1986/FriendFinder#readme"
+  "homepage": "https://github.com/Tim1986/FriendFinder#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
